Electric shock detection

--- a/Fourth3D/gradle/wrapper/gradle-wrapper.properties
+++ b/Fourth3D/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,7 @@
-#Sun Dec 02 20:25:51 CST 2018
-<resources>=
+#Sat Jan 13 09:12:34 PST 2018
+distributionBase=GRADLE_USER_HOME
+distributionPath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-4.6-all.zip
-<string=msgid\="1397052879051804371" n
-<?xml=version\="1.0" encoding\="utf-8"?>
+
